# uf2_parser

./: Cargo.toml
src/: main.rs  utils.rs
